[package]
name = "hbba-ui"
version = "0.1.0"
authors = ["ZB_陈 <949536395@qq.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.79"
console_error_panic_hook = { version = "0.1.7", optional = true }
eframe = "0.18"


[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
